--- a/source/_posts/2020/08/2020-08-01-bitcount.md
+++ b/source/_posts/2020/08/2020-08-01-bitcount.md
@@ -3,7 +3,7 @@ layout: post
 title: "42: The Answer To Life, The Universe and Everything"
 date: 2020-08-01 10:00:00
 comments: true
-categories: [DevOps,Programming,JDK]
+categories: [DevOps,Programming,Java,JDK]
 ---
 The story started with a [Twitter Post](https://twitter.com/lukaseder/status/1254133314962759688) about 
 the JDK method `bitCount` which is available for `Long` and `Integer` types.
