--- a/source/_posts/2020/08/2020-08-01-bitcount.md
+++ b/source/_posts/2020/08/2020-08-01-bitcount.md
@@ -13,7 +13,7 @@ If you take a look into the time line there was a reply https://twitter.com/Scot
 everything to the magic method which has been followed by
  [Lukas Eder](https://twitter.com/lukaseder/status/1254283473327710208?s=20):
 
-> For what percentage of longs would that be the correct result?`.
+> For what percentage of longs would that be the correct result?.
 
 This thread has inspired me to this article.
 
