--- a/source/_posts/2020/08/2020-08-01-bitcount.md
+++ b/source/_posts/2020/08/2020-08-01-bitcount.md
@@ -13,7 +13,7 @@ If you take a look into the time line there was a reply https://twitter.com/Scot
 everything to the magic method which has been followed by
  [Lukas Eder](https://twitter.com/lukaseder/status/1254283473327710208?s=20):
 
-> For what percentage of longs would that be the correct result?.
+> For what percentage of longs would that be the correct result?
 
 This thread has inspired me to this article.
 
@@ -141,7 +141,7 @@ down to the higher number with `bitCount=32` etc.
 
 Based on the runtime of this example you could roughly estimate the runtime for the variant with Long:
 `15 s * 2^32 = 64.424.509.440 seconds / 86400 seconds / day =  745.654 days / 365 days / year` which 
-results in ca. 2,000 years. So having a machine which has 1000 times more cpu's it could be dropped down
+results in ca. 2,000 years. So having a machine which has 1000 times more cpus it could be dropped down
 to about 2 years (theoretically) or maybe you could use more power by using GPU's on AWS cloud but in the end 
 no realizable solution.
 
@@ -151,7 +151,7 @@ The answer can be found by using some [mathematics](https://en.wikipedia.org/wik
 
 Let us take a known example from the above result output:
 
-We have 32 bit (Integer). Now we have 16 bits which should be `0` and 16 bits which should be `1`. By expressing that
+We have 32 bits (Integer). Now we have 16 bits which should be `0` and 16 bits which should be `1`. By expressing that
 like this:
 ```
        32! 
@@ -178,9 +178,9 @@ So based on the mathematics we could really answer the question via:
    42! * 22! 
 ```
 So this means we have 80,347,448,443,237,920 number where the `bitCount=42` and this means
-````
+```
    80,347,448,443,237,920
    ---------------------- * 100 = 0,435 %
           2^64
-````
+```
 So `0,435` percent of all long values having a `bitCount=42`.
