--- a/source/_posts/2020/08/2020-08-01-bitcount.md
+++ b/source/_posts/2020/08/2020-08-01-bitcount.md
@@ -8,7 +8,7 @@ categories: [DevOps,Programming,Java,JDK]
 The story started with a [Twitter Post](https://twitter.com/lukaseder/status/1254133314962759688) about 
 the JDK method `bitCount` which is available for `Long` and `Integer` types.
 
-If you take a look into the time line there was a reply https://twitter.com/ScottSelikoff/status/1254185742760280064 by
+If you take a look into the time line, there was a reply https://twitter.com/ScottSelikoff/status/1254185742760280064 by
 @ScottSelikoff (funny comment of course) who stated `42` as the answer to life, the universe and
 everything to the magic method which has been followed by
  [Lukas Eder](https://twitter.com/lukaseder/status/1254283473327710208?s=20):
@@ -57,7 +57,7 @@ Ok now we can try that.... Really? Never. This code will run a very very long ti
 
 > A long time ago in a galaxy far, far away...
 
-That might be a little long to wait for the result. Ok lets think a bit about the code. Ah Yes of course I got it. 
+That might be a little long to wait for the result. Ok let's think a bit about the code. Ah! Yes of course I got it. 
 We should use `parallel()` for the stream to get it faster.
 
 ```java
@@ -75,7 +75,7 @@ collect.forEach((k, v) -> System.out.printf("k = %4s v=%15s %7.5f\n", k, v, BigD
 That version will be faster than the previous one and will take... Sorry but I simply don't know cause I have not
 tested it ;-).
 
-Can make a simpler and faster solution to get a result in the end? 
+Can we make a simpler and faster solution to get a result in the end? 
 Ok we change the `Long` into `Integer`? Now the code looks like this. As you see I already added the `parallel()`
 in the code to get faster also you see I'm using `BigDecimal.valueOf(2L).pow(32)` (2^32) instead of 2^64 
 based on the usage of `Integer`: 
@@ -141,7 +141,7 @@ down to the higher number with `bitCount=32` etc.
 
 Based on the runtime of this example you could roughly estimate the runtime for the variant with Long:
 `15 s * 2^32 = 64.424.509.440 seconds / 86400 seconds / day =  745.654 days / 365 days / year` which 
-results in ca. 2,000 years. So having a machine which has 1000 times more cpus it could be dropped down
+results in ca. 2,000 years. So having a machine which has 1000 times more CPUs it could be dropped down
 to about 2 years (theoretically) or maybe you could use more power by using GPU's on AWS cloud but in the end 
 no realizable solution.
 
@@ -177,7 +177,7 @@ So based on the mathematics we could really answer the question via:
    ---------- = 80,347,448,443,237,920
    42! * 22! 
 ```
-So this means we have 80,347,448,443,237,920 number where the `bitCount=42` and this means
+So this means we have 80,347,448,443,237,920 numbers where the `bitCount=42` and this means
 ```
    80,347,448,443,237,920
    ---------------------- * 100 = 0,435 %
