--- a/source/_posts/2020/08/2020-08-17-itf-part-i.md
+++ b/source/_posts/2020/08/2020-08-17-itf-part-i.md
@@ -25,7 +25,7 @@ Writing integration test means having three parties involved:
 Let us start with a simple test case which simply requires that the build which contains 
 your new plugin to run successful. This looks like this by using the [Integration Testing Framework][itf]:
 
-```Java
+```java
 @MavenJupiterExtension
 class FirstMavenIT {
 
