Added links and updates.

--- a/source/_posts/2020/08/2020-08-17-itf-part-i.md
+++ b/source/_posts/2020/08/2020-08-17-itf-part-i.md
@@ -249,6 +249,11 @@ the redirection of stderr is logged into `mvn-stderr.log`. The directory `.m2/re
 contains the local cache (aka maven repository) of that build. 
 
 
+So this it is for Part I. If you like to learn more about the [Integration Testing Framework][itf] you can
+consult the [users guide][users-guide]. If you like to know the state of the release you can take a 
+look into the [release notes][release-notes].
+
+If you have ideas, suggestions or found bugs please [file in an issue on github][issue].
 
 
 <!-- 
@@ -286,9 +291,11 @@ Part III:
 
 
 
-
+[issue]: https://github.com/khmarbaise/maven-it-extension/issues
+[users-guide]: https://khmarbaise.github.io/maven-it-extension/itf-documentation/usersguide/usersguide.html
+[release-notes]: https://khmarbaise.github.io/maven-it-extension/itf-documentation/release-notes/release-notes.html
 [background]: https://khmarbaise.github.io/maven-it-extension/itf-documentation/background/background.html
-[itf]: https://khmarbaise.github.io/maven-it-extension/
+[itf]: https://github.com/khmarbaise/maven-it-extension
 [junit-jupiter]: https://junit.org/junit5/docs/current/user-guide/
 [junit-jupiter-extension]: https://junit.org/junit5/docs/current/user-guide/#extensions
 [assertj]: https://assertj.github.io/doc/
