Fixed issues. / Typos.

--- a/source/_posts/2020/08/2020-08-17-itf-part-i.md
+++ b/source/_posts/2020/08/2020-08-17-itf-part-i.md
@@ -13,7 +13,7 @@ How to test a Maven Plugin? There are in general several options to test a Maven
 * [Maven Plugin Testing Harness](https://maven.apache.org/plugin-testing/maven-plugin-testing-harness/index.html)
 * etc. 
 
-You can read about [different reason][background] not to use options.
+You can read about [different reason][background] not to use one of those options.
 
 Coming back to the subject and think about to write integration tests for a Maven plugin.
 Writing integration test means having three parties involved:
@@ -55,10 +55,11 @@ Ah finally we have the parameter of the test method `MavenExecutionResult result
 you access to the result of the build and many more. The `assertThat(..)` is a customer
 assertions for `AssertJ` to make writing assertions more convenient.
 
-So now we have to define the project which is used to use our plugin. As always in Apache Maven
+So now we have to define the project which is used to use our plugin. As always in [Apache Maven][maven]
 you should follow convention over configuration and the ITF is not an exception of that.
-We locate the integration itself into a location. I strongly recommend to name your 
-integration tests like `*IT.java` but of course you can change that if you like.
+We locate the integration itself into the usual location of test like `src/test/java/...`. 
+I recommend to name your integration tests like `*IT.java` but of course you 
+can change that if you like.
 ```
 .
 └── src/
@@ -300,3 +301,4 @@ Part III:
 [junit-jupiter-extension]: https://junit.org/junit5/docs/current/user-guide/#extensions
 [assertj]: https://assertj.github.io/doc/
 [maven-failsafe-plugin]: https://maven.apache.org/surefire/maven-failsafe-plugin/index.html
+[maven]: https://maven.apache.org
