Added final link.

--- a/source/_posts/2020/08/2020-08-17-itf-part-i.md
+++ b/source/_posts/2020/08/2020-08-17-itf-part-i.md
@@ -256,6 +256,8 @@ look into the [release notes][release-notes].
 
 If you have ideas, suggestions or found bugs please [file in an issue on github][issue].
 
+A full example can be found here: https://github.com/khmarbaise/itf-example-article-part-i
+
 
 <!-- 
 Part I:
