Maven Plugin Testing - In A Modern Way Part II

--- a/source/_posts/2020/08/2020-08-17-itf-part-i.md
+++ b/source/_posts/2020/08/2020-08-17-itf-part-i.md
@@ -264,6 +264,7 @@ Part I:
  Basic integration test; checking the build result; 
 
 Part II:
+ - Several Test cases
  - Checking build result in different ways.
  - Checking log output debug, info, warn etc.
    Assertions for maven log.
