--- a/source/_posts/2020/09/2020-09-10-itf-part-v.md
+++ b/source/_posts/2020/09/2020-09-10-itf-part-v.md
@@ -115,7 +115,7 @@ public @interface MavenSkipTests {
 }
 ```
 or other things. If you have good ideas do not hesitate to file in a [feature request][issue]
-for the project so it can be made permenant part of it.
+for the project so it could be made permanent part of it.
 
 So this it is for Part V. If you like to learn more about the [Integration Testing Framework][itf] 
 you can consult the [users guide][users-guide]. If you like to know the state of the release you 
